# PyPLUTO

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .vale.ini  CHANGELOG.md  CHANGES  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  coverage.txt  coverage.xml  coverage_tests.py  create_badge.py  dev-sync.sh  index.html  mypy_files.txt  paper.md  pyproject.toml  requirements.txt  requirements_dev.txt  ruff_errors.txt  setup.cfg
.github/workflows/: CODEOWNERS  code-style.yml  coverage.yml  coverage_tests.yml  draft-pdf.yml  draft-pdf.yml.disabled  pre-commit.yml  publish_pypi.yml  readthedocs.yaml  readthedocs.yml  test.yml  test_coverage.yml  test_interrogate.yml  test_linux.yml  test_macos.yml  test_pylint.yml  test_windows.yml
Docs/: .buildinfo  coverage.xml  requirements.txt
Docs/Badges/: coverage.xml  interrogate.txt  pylint.txt
Docs/Figures/: ex_gui_ot.py  test_gui_ot.py  test_gui_sod.py
Docs/OLD/: colorbar.rst  conf.py  create_axes.rst  display.rst  examples.rst  image.rst  index.rst  install.rst  legend.rst  load.rst  plot.rst  python.rst  pytools.rst  set_axis.rst  test01_sod.rst  tools.rst  zoomdisplay.rst  zoomplot.rst
Docs/_build/html/: .buildinfo  .buildinfo.bak  animate.html  cartesian_vector.html  colorbar.html  contour.html  contributing.html  create_axes.html  curl.html  display.html  divergence.html  examples.html  faq.html  find_contour.html  find_fieldlines.html  fourier.html  genindex.html  gradient.html  gui.html  guiex1.html  guiex2.html  guiload.html  guiplot.html  guivars.html  image.html  imageclass.html  index.html  install.html  interactive.html  legend.html  load.html  loadclass.html  loadpart.html  mirror.html  oplotbox.html  plot.html  read_file.html  repeat.html  reshape_cartesian.html  reshape_uniform.html  (+31 more)
Docs/source/: animate.rst  cartesian_vector.rst  colorbar.rst  conf.py  contour.rst  contributing.rst  create_axes.rst  curl.rst  display.rst  divergence.rst  examples.rst  faq.rst  find_contour.rst  find_fieldlines.rst  fourier.rst  gradient.rst  gui.rst  guiload.rst  guiplot.rst  guivars.rst  image.rst  imageclass.rst  index.rst  install.rst  interactive.rst  legend.rst  load.rst  loadclass.rst  plot.rst  python.rst  read_file.rst  repeat.rst  reshape_cartesian.rst  reshape_uniform.rst  savefig.rst  scatter.rst  select.rst  set_axis.rst  set_text.rst  show.rst  (+16 more)
Examples/: run_examples.py  test01_sod.py  test02_ot.py  test03_rti.py  test04_rotor.py  test05_fieldloop.py  test06_diskplanet.py  test07_khi.py  test08_torus.py  test09_blast.py  test10_riemann2d.py  test11_xpoint.py  test12_riemannlp.py  test13_flowpastcyl.py
GUI/: attempt.py  config.py  globals.py  main.py  main_window.py  panels.py  trybar.py  utils.py
Paper/: paper.bib  paper.md  pyplutotests.py
PyPLUTO.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Src/: setup.py
Src/PyPLUTO.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Src/pyPLUTO/: 3dplot.py  _3dplot.py  __init__.py  _datatools.py  _display.py  _fig.py  _figtools.py  _h_image.py  _h_load.py  _h_pypluto.py  _interact.py  _libraries.py  _lines.py  _nabla.py  _plot.py  _pytools.py  _readout.py  _readpart.py  _zoom.py  amr.py  colorbar.py  configure.py  contour.py  create_axes.py  datatools.py  defpluto.py  delegator.py  display.py  echo_load.py  fig.py  figtools.py  figure.py  figure_new.py  findlines.py  fourier.py  h_image.py  h_load.py  h_pypluto.py  image.py  image_new.py  (+40 more)
Src/pypluto.egg-info/: PKG-INFO  SOURCES.txt
Tests/: 0test_examples.py  _test_examples.py  conftest.py  create_axis.py  im01_init_image.py  im02_create_axis.py  im02_createaxis.py  im03_set_axis.py  im04_plot.py  im05_legend.py  im06_display.py  im08_zoomplot.py  init_image.py  legend.py  lf01_loadpath.py  lf02_loadformat.py  lf03_loadgrid.py  lf04_loadout.py  lf05_findfiles.py  lf06_varsoffset.py  lf07_readdata.py  lp01_loadpath.py  lp02_loadformat.py  lp03_findfiles.py  lp04_varsoffset.py  lp05_readdata.py  plot.py  run_all.py  run_tests.py  set_axis.py  te_examples.py  test01_sod.py  test02_ot.py  test03_rti.py  test04_rotor.py  test05_fieldloop.py  test06_diskplanet.py  test07_blast.py  test07_khi.py  test08_khi.py  (+60 more)
Tests/Test_load/1D/: load_1d.py
Tests/Test_load/2D/: load_2d.py
Tests/Test_load/3D/: load_3d.py
Tests/Test_load/multiple_files/: flt.out  grid.out  prs.0000.dbl  prs.0000.flt  rho.0000.dbl  rho.0000.flt  rho.0000.vtk  vtk.out  vx1.0000.dbl  vx1.0000.flt  vx2.0000.dbl  vx2.0000.flt  vx2.0000.vtk  (+1 more)
Utils/: .~lock.all_kwargs.csv#  all_kwargs.csv  analyze_docstrings.py  coverage.xml  coverage_badge.py  exposed_kwargs.json  generate_badge.py  generate_badges.py  rewrite_docstrings.py  run_pipeline.py  scan_exposed.py  scan_kwargs.py  test_prog.py  test_scan.py
pyPLUTO/: __init__.py  amr.py  baseloadmixin.py  baseloadstate.py  configure.py  h_pypluto.py  image.py  imagemixin.py  imagestate.py  load.py  loadmixin.py  loadpart.py  loadstate.py  newload.py  pytools.py
pyPLUTO/codes/: echo_load.py
pyPLUTO/gui/: config.py  custom_var.py  globals.py  main.py  main_window.py  panels.py  utils.py
pyPLUTO/imagefuncs/: colorbar.py  contour.py  create_axes.py  display.py  figure.py  imagetools.py  interactive.py  legend.py  plot.py  range.py  scatter.py  set_axis.py  streamplot.py  zoom.py
pyPLUTO/loadfuncs/: baseloadtools.py  codeselection.py  defpluto.py  descriptor.py  findfiles.py  findformat.py  initload.py  loadvars.py  offsetdata.py  offsetfluid.py  read_files.py  readdata.py  readdefplini.py  readfluid.py  readgrid.py  readgridalone.py  readgridfile.py  readgridout.py  readtab.py
pyPLUTO/toolfuncs/: transform.py  units.py
pyPLUTO/utils/: annotator.py  inspector.py  make_docstrings.py
py_pluto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pyPLUTO/: __init__.py  amr.py  baseloadmixin.py  baseloadstate.py  configure.py  examples_api.py  examples_cli.py  h_pypluto.py  image.py  imagekwargs.py  imagemixin.py  imagestate.py  load.py  load.pyi  loadkwargs.py  loadmixin.py  loadpart.py  loadstate.py  newload.py  newloadpart.py  pytools.py
(+495 files in other folders)
