[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "py-pluto"
version = "1.1.4"
description = "PyPLUTO: Plotting routines for PLUTO"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "G. Mattia", email = "mattia@mpia.de" },
    { name = "D. Crocco" },
    { name = "D. Melon Fuksman" },
    { name = "M. Bugli" },
    { name = "V. Berta" },
    { name = "E. Puzzoni" },
    { name = "A. Mignone" },
    { name = "B. Vaidya" }
]
dependencies = [
    "contourpy",
    "numpy",
    "matplotlib",
    "scipy",
    "numexpr",
    "pandas",
    "h5py",
    "inifix>=5.1.0",
]

[project.optional-dependencies]
gui = [
    "PySide6",
]
pasta = [
    "pastamarkers",
]

[dependency-groups]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "numpydoc",
    "pydata-sphinx-theme",
]

test = [
    "pytest",
    "pytest-doctestplus",
    "coverage",
    "pytest-cov",
    "pytest-xdist>=3.8.0",
]

dev = [
    "uv",
    "pandas-stubs",
    "h5py-stubs",
    "pre-commit",
    "pyright",
    "pyrefly",
    "ruff",
    "ty>=0.0.17",
    "radon",
]

notebook = [
    "ipython",
]

dev-test = [
    { include-group = "dev" },
    { include-group = "test" },
]

dev-docs = [
    { include-group = "dev" },
    { include-group = "docs" },
]

local-dev = [
    { include-group = "dev" },
    { include-group = "test" },
    { include-group = "docs" },
    { include-group = "notebook" },
]

[tool.setuptools.packages.find]
include = ["pyPLUTO*"]

[project.scripts]
pypluto-gui = "pyPLUTO.gui.main:main"

[tool.coverage.run]
source = ["pyPLUTO"]
branch = true

[tool.coverage.report]
omit = [
    "*/Tests/*",
    "*/Docs/*",
    "*/.venv/*",
    "*/site-packages/*"
]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING:",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError"
]

[tool.ruff]
target-version = "py312"
line-length = 80
respect-gitignore = true
fix = true
fix-only = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (errors)
    "F",  # pyflakes (logical errors)
    "W",    # warnings
    "I",  # isort (import sorting)
    "UP", # pyupgrade (e.g. f-strings for older format)
    "D",  # pydocstyle (docstring conventions)
    "PL", # pylint (careful coding style)
    "B",  # flake8-bugbear (likely bugs and design flaws)
    "A",  # flake8-builtins (avoid shadowing built-ins)
    "C4", # flake8-comprehensions (inefficient comprehensions)
    "SIM",# flake8-simplify (simplify complex logic)
    "PT", # flake8-pytest-style (if you use pytest)
    "RUF",# Ruff-specific rules
    "ANN",# ruff-annotations (type annotations)
]

ignore = [
    "D203",  # Conflicts with D211 (one-blank-line-before-class)
    "D213"   # Conflicts with D212 (summary on first vs second line)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.pypi-dependencies]
py-pluto = { path = ".", editable = true }

[tool.pixi.feature.gui.pypi-dependencies]
py-pluto = { path = ".", editable = true, extras = ["gui"] }

[tool.pixi.feature.pasta.pypi-dependencies]
py-pluto = { path = ".", editable = true, extras = ["pasta"] }

[tool.pixi.feature.full.pypi-dependencies]
py-pluto = { path = ".", editable = true, extras = ["gui", "pasta"] }

[tool.pixi.environments]
default = { features = [] }
gui = { features = ["gui"] }
pasta = { features = ["pasta"] }
gui-pasta = { features = ["full"] }

dev = { features = ["dev"] }
test = { features = ["test"] }
docs = { features = ["docs"] }
notebook = { features = ["notebook"] }
dev-test = { features = ["dev", "test"] }
dev-docs = { features = ["dev", "docs"] }
local-dev = { features = ["dev", "test", "docs", "notebook"] }