[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "py-pluto"
dynamic = ["version"]
description = "PyPLUTO: Plotting routines for PLUTO"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "G. Mattia", email = "mattia@mpia.de" },
    { name = "D. Crocco" },
    { name = "D. Melon Fuksman" },
    { name = "M. Bugli" },
    { name = "V. Berta" },
    { name = "E. Puzzoni" },
    { name = "A. Mignone" },
    { name = "B. Vaidya" }
]
dependencies = [
    "contourpy>=1.2.1",
    "numpy>=2.0.0",
    "matplotlib>=3.8.4",
    "scipy>=1.13.0",
    "numexpr>=2.10.0",
    "pandas>=2.2.2",
    "h5py>=3.11.0",
    "inifix>=5.1.0",
]

[project.optional-dependencies]
gui = [
    "PySide6",
]

pasta = [
    "pastamarkers"
]

[dependency-groups]
docs = [
    "sphinx>=9.0.0",
    "sphinx-automodapi>=0.20.0",
    "numpydoc>=1.0.0"
]
test = [
    "pytest>=9.0.0",
    "pytest-doctestplus>=1.5.0",
    "coverage>=7.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
] 
dev = [
    "uv",
    "pandas-stubs",
    "h5py-stubs",
    "pre-commit",
    "pyright",
    "pyrefly",
    "ruff",
    "ty>=0.0.17",
    "radon",
    "pydata-sphinx-theme",
]

notebook = [
    "ipython>=9.0.0",
]

dev-test = [
    { include-group = "dev" },
    { include-group = "test" },
]

dev-docs = [
    { include-group = "dev" },
    { include-group = "docs" },
]

local-dev = [
    { include-group = "dev" },
    { include-group = "test" },
    { include-group = "docs" },
    { include-group = "notebook" },
]

[project.scripts]
pypluto-gui = "pyPLUTO.gui.main:main"

[tool.flit.module]
name = "pyPLUTO"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
omit = [
    "*/Tests/*",
    "*/Docs/*",
    "*/.venv/*",
    "*/site-packages/*",
]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING:",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError"
]

[tool.ruff]
target-version = "py312"
line-length = 80
respect-gitignore = true
fix = true
fix-only = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (errors)
    "F",  # pyflakes (logical errors)
    "W",    # warnings
    "I",  # isort (import sorting)
    "UP", # pyupgrade (e.g. f-strings for older format)
    "D",  # pydocstyle (docstring conventions)
    "PL", # pylint (careful coding style)
    "B",  # flake8-bugbear (likely bugs and design flaws)
    "A",  # flake8-builtins (avoid shadowing built-ins)
    "C4", # flake8-comprehensions (inefficient comprehensions)
    "SIM",# flake8-simplify (simplify complex logic)
    "PT", # flake8-pytest-style (if you use pytest)
    "RUF",# Ruff-specific rules
    "ANN",# ruff-annotations (type annotations)
]

ignore = [
    "D203",  # Conflicts with D211 (one-blank-line-before-class)
    "D213"   # Conflicts with D212 (summary on first vs second line)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.uv]
no-build-package = [
    # mandatory deps
    "contourpy",
    "coverage",
    "h5py",
    "kiwisolver",
    "matplotlib",
    "numexpr",
    "numpy",
    "pandas",
    "pillow",
    "scipy",

    # dev deps
    "ruff",
    "pre-commit",


    # transitive deps
    "decorator",
    "docutils",
    "markupsafe",
    "jinja2",
    "setuptools",
    "simplejson",
]
constraint-dependencies = [
    "jsonschema>=0.3",
    "pillow>=10.0.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.pypi-dependencies]
py-pluto = { path = ".", editable = true }

[tool.pixi.feature.gui.pypi-dependencies]
py-pluto = { path = ".", editable = true, extras = ["gui"] }

[tool.pixi.feature.pasta.pypi-dependencies]
py-pluto = { path = ".", editable = true, extras = ["pasta"] }

[tool.pixi.feature.full.pypi-dependencies]
py-pluto = { path = ".", editable = true, extras = ["gui", "pasta"] }

[tool.pixi.environments]
default = { features = [] }
gui = { features = ["gui"] }
pasta = { features = ["pasta"] }
full = { features = ["full"] }

dev = { features = ["dev"] }
test = { features = ["test"] }
docs = { features = ["docs"] }
notebook = { features = ["notebook"] }
dev-test = { features = ["dev", "test"] }
dev-docs = { features = ["dev", "docs"] }
local-dev = { features = ["dev", "test", "docs", "notebook"] }
