[metadata]
name = pyPLUTO
version = 0.8
author = G. Mattia, D.Crocco
author_email = mattia@fi.infn.it
description = Plotting routines for PLUTO
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =Src
packages = find:
python_requires= >=3.6

# Example of how to add dependencies:
install_requires =
    numpy
    matplotlib>=3.5
    scipy

[options.packages.find]
where = Src

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
