[metadata]
name = PyPLUTO
version = 1.0.0
author = G. Mattia, D. Crocco, D. Melon Fuksman, M. Bugli, V. Berta, E. Puzzoni, 
         A. Mignone, B. Vaidya
author_email = mattia@mpia.de
description = Plotting routines for PLUTO
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE

[options]
package_dir =
    = Src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    matplotlib>=3.5
    scipy
    pandas
    h5py

[options.packages.find]
where = Src

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    numpydoc
test =
    pytest
    pytest-doctestplus
    flake8
    codecov
    pytest-cov
dev =
    black
    isort
    pre-commit

[options.entry_points]
console_scripts =
    pypluto = pypluto.cli:main
